--- a/HW9.ipynb
+++ b/HW9.ipynb
@@ -557,12 +557,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "a894aef8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing similar_movies.py\n"
+     ]
+    }
+   ],
    "source": [
-    "#%%writefile similar_movies.py\n",
+    "%%writefile similar_movies.py\n",
     "import streamlit as st\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -605,6 +613,24 @@
     "\n",
     "st.write('Suggested Similar Movies:', suggested)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "be72a50e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^C\n"
+     ]
+    }
+   ],
+   "source": [
+    "!streamlit run similar_movies.py"
    ]
   },
   {
